[gd_scene load_steps=6 format=3 uid="uid://da51n7rcs6fq8"]

[ext_resource type="PackedScene" uid="uid://cy36aygvs66pn" path="res://models/gobot/gobot_skin.tscn" id="1_0475b"]
[ext_resource type="Script" path="res://npc.gd" id="1_ptecd"]
[ext_resource type="PackedScene" uid="uid://y2d8i5548a4h" path="res://systems/interaction/Interactable.tscn" id="3_o5lvj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_trwiq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dv4oc"]
size = Vector3(1, 1.40515, 1)

[node name="NPC" type="CharacterBody3D"]
script = ExtResource("1_ptecd")

[node name="GobotSkin" parent="." instance=ExtResource("1_0475b")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_trwiq")

[node name="Interactable" parent="." instance=ExtResource("3_o5lvj")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.705849, 0)
shape = SubResource("BoxShape3D_dv4oc")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
